2011-04-27  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* gdbmi.py: The 'frame' command updates the frame sign.
	* setup.py inferior_tty.py gdb.py: allow the gdb 'shell' command and
	include inferior_tty.py in the distribution.
	* gdb.py: Handling of the netbeans socket disconnection, closes the
	gdb session also when gdb is busy.
	* buffer.py netbeans.py: Disable automatic display of the console
	(rework).
	* vim.py buffer.py netbeans.py debugger.py: Add the 'none' LOCATION to
	the '--window' command line option.
	* gdb.py: Ignore 'sigint' or 'quit' command on startup.
	* gdb.py gdbmi.py debugger.py posix.py: On gdb abnormal termination,
	save the project file and forcibly terminate the current session.
	* gdbmi.py: Set breakpoint in a template function.
	* vim.py: Explicit error message after installation failure.
	* debugger.py: Do not send any netbeans command after DETACH.

===============================================================================
2010-11-15  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* buffer.py debugger.py gdb.py pydb.py netbeans.py vim.py: Support of
	pdb, the python debugger.

===============================================================================
2010-09-26  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* gdbmi.py: Fix the highlighting of a watched variable child is not
	reset when the value of the child object does not change, after
	stepping for example.
	* gdb.py gdbmi.py: The new cwindow command.
	* vim.py: Fix error messages scramble vim (not gvim) display.
	* gdb.py gdbmi.py: Fix exception after folding a watched variable.
	* gdb.py: Fix cannot fold watched variable with gdb 7.1.
	* setup.py pyclewn_install.py autoload/pyclewn.vim: Fix the :Pyclewn
	command does not work on Windows.
	* vim.py setup.py pyclewn_install.py: Use the standard layout for vim
	runtime files (Sergey Khorev).
	* vim.py netbeans.py buffer.py: Add a new option to the command line